# WebGPU_CMake

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1  build.sh  clean.bat  clean.sh  run.bat  run.ps1  run.sh
shaders/: basic.wgsl  triangle.wgsl
src/: lot_game_object.h  lot_web_buffer.cpp  lot_web_buffer.h  lot_web_device.cpp  lot_web_device.h  lot_web_pipeline.cpp  lot_web_pipeline.h  lot_web_renderer.cpp  lot_web_renderer.h  lot_web_swapchain.cpp  lot_web_swapchain.h  main.cpp  simple_render_system.cpp  simple_render_system.h
src/js/: webgpu_bindings.js
